--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <p id="debugText">(recent text display or temporary debug output)</p>
+
     <script src="car.js"></script>
     <script src="track.js"></script>
 
