--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="car.js"></script>
     <script src="track.js"></script>
 
+    <script src="input.js"></script>
     <script src="background.js"></script>
     <script src="config.js"></script>
     <script src="main.js"></script>
