--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta content="text/html;charset=utf-­‐8" http-­‐equiv="Content-­‐Type">
     <meta content="utf-­‐8" http-­‐equiv="encoding">
-    <title>Pong</title>
+    <title>Racing</title>
 </head>
 
 <body>
