--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="track.js"></script>
 
     <script src="input.js"></script>
+    <script src="graphics.js"></script>
     <script src="background.js"></script>
     <script src="config.js"></script>
     <script src="main.js"></script>
