--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <p id="debugText">(recent text display or temporary debug output)</p>
 
-    <script src="car.js"></script>
-    <script src="track.js"></script>
+    <script src="src/car.js"></script>
+    <script src="src/track.js"></script>
 
-    <script src="input.js"></script>
-    <script src="graphics.js"></script>
-    <script src="background.js"></script>
-    <script src="config.js"></script>
-    <script src="main.js"></script>
+    <script src="src/input.js"></script>
+    <script src="src/graphics.js"></script>
+    <script src="src/background.js"></script>
+    <script src="src/config.js"></script>
+    <script src="src/main.js"></script>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
 </body>
 
